[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iugu-sdk"
version = "0.0.1"
authors = [
  { name="Gabriel Niziolek", email="ganiziolek@gmail.com" },
]
description = " Unofficial package to interface with IUGU payment API "
keywords = ["iugu", "sdk", "payment"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests >= 2.31",
]

[project.optional-dependencies]
dev = [
    "python-dotenv >= 0.21.0",
    "pytest-dotenv >= 0.5.2",
    "pylint >= 2.17.4"
]

[project.urls]
"Homepage" = "https://github.com/GaNiziolek/iugu-sdk"
"Bug Tracker" = "https://github.com/GaNiziolek/iugu-sdk/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]